refactor: 하드 코딩 내역 상수로 뺌